<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/server">
	<PreferenceCategory android:title="@string/preferences">
		<EditTextPreference android:key="name"
			android:title="Name"></EditTextPreference>
		<EditTextPreference android:key="hostname"
			android:title="@string/hostname"></EditTextPreference>
		<EditTextPreference android:key="port"
			android:defaultValue="80" android:title="@string/port"></EditTextPreference>
		<EditTextPreference android:key="path"
			android:defaultValue="/" android:title="@string/path"></EditTextPreference>
		<EditTextPreference android:key="database"
			android:title="@string/databaseid" android:summary="@string/databaseid_desc"></EditTextPreference>
		<EditTextPreference android:key="username"
			android:title="@string/username"></EditTextPreference>
		<EditTextPreference android:key="password"
			android:password="true" android:title="@string/password"></EditTextPreference>
		<ListPreference android:key="version" android:title="@string/version"
			android:entries="@array/version_list" android:entryValues="@array/api_list"
			android:summary="@string/version"></ListPreference>
	</PreferenceCategory>

</PreferenceScreen>
