<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical">


	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TableRow>
			<TextView android:text="@string/name" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="14sp"></TextView>
			<EditText android:text="@+id/EditText01" android:id="@+id/EditText01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
		</TableRow>
		<TableRow android:id="@+id/template">
			<TextView android:text="@string/template"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<RadioGroup android:id="@+id/RadioGroupTemplates"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="vertical"></RadioGroup>
		</TableRow>
	</TableLayout>

	<Button android:id="@+id/button_save" android:text="@string/save"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>
